Estruturação HTML e CSS

--- a/homePage.html
+++ b/homePage.html
@@ -5,8 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <nav>
+        User
+        Buscados
+        Mais tocadas
+        Playlist
+    </nav>
+
+    <main>
+        <section class="section-main-title">
+            <h1 class="main-title">Periodo do dia</h1>
+        </section>
+        <section class="section-listen-again">
+            <div>ouca novamente</div>
+        </section>
+        <section class="section-hits">
+            <div class="hit-nacional">hit nacional</div>
+            <div class="hit-internacional">hit internacional</div>
+            <div class="suggestions">sugestoes</div>
+        </section>
+        <section class="section-news">
+            <div>novidades artistas q vcs segue</div>
+        </section>
+
+    </main>
 </body>
 </html>
