Ajustes estilos da página

--- a/homePage.html
+++ b/homePage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <nav>
         User
@@ -18,20 +20,61 @@
 
     <main>
         <section class="section-main-title">
-            <h1 class="main-title">Periodo do dia</h1>
+            <h1 class="main-title">Bem vindo ao Spotglass =D</h1>
         </section>
         <section class="section-listen-again">
             <div>ouca novamente</div>
         </section>
+
         <section class="section-hits">
-            <div class="hit-nacional">hit nacional</div>
-            <div class="hit-internacional">hit internacional</div>
-            <div class="suggestions">sugestoes</div>
+            <div class="hits-box" id="hit-nacional">
+                <h2 class="suggestions-title">Hit nacional</h2>
+                <div class="avatar-options">
+                    <img src="img/ui1.png" alt="" class="suggestions-avatar">
+                    <ol>
+                        <li>Banda x</li>
+                        <li>Banda x</li>
+                        <li>Banda x</li>
+                        <li>Banda x</li>
+                        <li>Banda x</li>
+                    </ol>
+                </div>
+            </div>
+
+            <div class="hits-box" id="hit-internacional">
+                <h2 class="suggestions-title">Hit internacional</h2>
+                <div class="avatar-options">
+                    <img src="img/ui2.png" alt="" class="suggestions-avatar">
+                    <ol>
+                        <li>Banda x</li>
+                        <li>Banda x</li>
+                        <li>Banda x</li>
+                        <li>Banda x</li>
+                        <li>Banda x</li>
+                    </ol>
+                </div>
+            </div>
+
+            <div class="hits-box" id="suggestions">
+                <h2 class="suggestions-title">Sugestões</h2>
+                <div class="avatar-options">
+                    <img src="img/ui3.png" alt="" class="suggestions-avatar">
+                    <ol>
+                        <li>Banda x</li>
+                        <li>Banda x</li>
+                        <li>Banda x</li>
+                        <li>Banda x</li>
+                        <li>Banda x</li>
+                    </ol>
+                </div>
+            </div>
         </section>
+
         <section class="section-news">
             <div>novidades artistas q vcs segue</div>
         </section>
 
     </main>
 </body>
+
 </html>
