--- a/homePage.html
+++ b/homePage.html
@@ -12,10 +12,7 @@
 
 <body>
     <nav>
-        User
-        Buscados
-        Mais tocadas
-        Playlist
+        MENU LATERAL
     </nav>
 
     <main>
