Alterações Menu lateral e player

--- a/homePage.html
+++ b/homePage.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/homePage.css">
     <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/footer.css">
 </head>
 
 <body onload="carregar()">
@@ -20,14 +21,9 @@
     <nav class=" bar">
 
         <div class="menu">
+            
             <a href="">
                 <div class="link perfil-menu"><img class="profile-pic" src="./img/profile.png" alt="">Clint Eastwood</div>
-            </a>
-            <a href="">
-                <div class="link">Mais ouvidas</div>
-            </a>
-            <a href="">
-                <div class="link">Playlist</div>
             </a>
             <a>
                 <div class="div-search">
@@ -36,6 +32,26 @@
                 </div>
 
             </a>
+
+            <div class="div-mais-ouvidas">Mais ouvidas
+                <a href="">
+                    <div class="link">Musica</div>
+                    <div class="link">Musica</div>
+                    <div class="link">Musica</div>
+                    <div class="link">Musica</div>
+                </a>
+            </div>
+
+            <div class="div-playlists">Playlists
+                <a href="">
+                    <div class="link">Favoritas</div>
+                    <div class="link">Para dirigir</div>
+                    <div class="link">Para relaxar</div>
+                    <div class="link">Para Festas</div>
+                </a>
+            </div>
+
+           
         </div>
     </nav>
 
@@ -95,7 +111,13 @@
 
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="player">
+            <a href=""><img src="./img/volta1.png" alt=""></a>
+            <a href=""><img src="./img/play1.png" alt=""></a>
+            <a href=""><img src="./img/vai1.png" alt=""></a>
+        </div>
+    </footer>
 
     <script src="./js/main.js"></script>
 </body>
